--- a/premium/erotic-blueprint_tender_protector.html
+++ b/premium/erotic-blueprint_tender_protector.html
@@ -13,29 +13,44 @@
       margin: 0;
       padding: 2rem;
       border: 8px solid #064D95;
+      box-shadow: 0 0 10px #064D95;
     }
-    .logo-container {
-      text-align: center;
-      margin-bottom: 1.5rem;
-    }
-    .logo-container img {
-      max-width: 160px;
-    }
+
     h1 {
       font-style: italic;
       color: #064D95;
       text-align: center;
-      font-size: 2.5rem;
+      font-size: 2.8rem;
       text-shadow: 0 0 8px #064D95;
-      margin-bottom: 0.5rem;
+      margin-top: 1rem;
     }
+
+    .logo-container {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 1rem;
+    }
+
+    .logo-container img {
+      height: 60px;
+    }
+
     .slogan {
       font-style: italic;
       text-align: center;
-      font-size: 1.2rem;
-      margin-bottom: 2rem;
+      font-size: 1.3rem;
+      margin-top: -1rem;
+      margin-bottom: 0.5rem;
       color: #ccc;
     }
+
+    .quote {
+      color: #aaaaaa;
+      font-style: italic;
+      text-align: center;
+      margin-bottom: 2rem;
+    }
+
     .images-container {
       display: flex;
       justify-content: center;
@@ -43,44 +58,64 @@
       gap: 8px;
       margin: 2rem 0;
     }
+
     .image-wrapper {
       border: 4px solid #064D95;
-      padding: 4px;
+      padding: 0;
       box-shadow: 0 0 10px #064D95;
+      background-color: #111;
     }
+
     .image-wrapper img {
-      width: 220px;
-      height: auto;
       display: block;
+      width: 250px;
+      height: auto;
     }
+
     .divider {
       width: 4px;
       background-color: #064D95;
-      height: 100%;
       box-shadow: 0 0 10px #064D95;
     }
+
     .content-section {
       margin-bottom: 2rem;
     }
+
+    .content-section h2 {
+      font-size: 1.8rem;
+      margin-top: 2rem;
+      color: #ffffff;
+      border-bottom: 2px solid #064D95;
+      padding-bottom: 0.3rem;
+    }
+
     .content-section ul {
       padding-left: 1.2rem;
     }
+
     .content-section li {
       margin-bottom: 0.5rem;
     }
-    .content-section p {
-      margin-bottom: 1rem;
+
+    .italic {
+      font-style: italic;
+    }
+
+    p {
       line-height: 1.6;
     }
   </style>
 </head>
 <body>
+
   <div class="logo-container">
     <img src="/golden-le-libido-logo.png" alt="Le Libido Logo">
   </div>
 
   <h1>Tender Protector</h1>
-  <p class="slogan">"I notice everything. Especially you."</p>
+  <p class="slogan">You lead with gravity, not volume.</p>
+  <p class="quote">“The deepest pleasure doesn’t come from control. It comes from being trusted with it.” – Anonymous</p>
 
   <div class="images-container">
     <div class="image-wrapper">
@@ -94,10 +129,9 @@
 
   <div class="content-section">
     <h2>Description</h2>
-    <p>Tender Protectors are emotionally attuned dominants who lead with presence, calm, and care. They notice what others miss and hold space with quiet authority. Their style isn’t about control for its own sake—it’s about making you feel safe enough to unravel. When they give commands, it’s not a performance. It’s earned. They thrive when partnered with someone who trusts their intentions, honors their steadiness, and melts under their calm dominance.</p>
+    <p>You lead with grace, grounding those around you. You’re the kind of partner others surrender to not out of fear, but trust. You’re not just in charge, you’re responsible. When you lead, people feel held, not handled. In dominance psychology, this is called secure authority—you don’t control people, you create space for them to feel free.</p>
   </div>
-
-  <div class="content-section">
+    <div class="content-section">
     <h2>Power Dynamic Arc</h2>
     <p><strong>Relationship Trajectory:</strong><br>
     Tender Protectors are stable dominants. Their leadership is grounded in emotional attunement rather than ego. They are least likely to initiate polarity shifts unless it’s to recalibrate for the sake of their partner’s well-being.</p>
@@ -114,7 +148,8 @@
     <p><strong>Ideal Dynamic:</strong><br>
     A gentle but firm dominance paired with a devoted or emotionally attuned submissive creates the most secure and satisfying connection. Think “earned trust” rather than strict control.</p>
   </div>
-    <div class="content-section">
+
+  <div class="content-section">
     <h2>Origins of Desire</h2>
     <ul>
       <li><strong>Evolutionary Biological Theory:</strong> Their desire to protect is tied to deep-rooted evolutionary traits. They’re wired to safeguard those they care for.</li>
@@ -175,8 +210,7 @@
     <p><strong>Erotic Drop (Dealbreaker):</strong><br>
     Being disrespected, mocked, or treated like they’re weak for being emotionally available. They shut down instantly if their care is mistaken for weakness or control.</p>
   </div>
-
-  <div class="content-section">
+    <div class="content-section">
     <h2>Erotic Short Story</h2>
     <p>You close the door behind you, locking it with a soft click. The sound settles into the quiet like a promise.</p>
     <p>They’re already standing there, near the center of the room. Waiting.</p>
@@ -187,7 +221,8 @@
     <p>“You want to take your clothes off, don’t you.”</p>
     <p>It isn’t a question. It’s something you already know. You just want them to say it.</p>
     <p>They hesitate, but not for long. You feel the weight of that pause. Not because they’re unsure, but because this moment matters to them. Because you matter to them.</p>
-        <p>Then they nod. And start to undress.</p>
+    <p>Then they nod.</p>
+    <p>And start to undress.</p>
     <p>You don’t help. You don’t touch. You step back a little, give them room, and let them move at their own pace. It’s important that they feel your attention. You want them to feel every second of it, the way your gaze rests heavy on them, without judgment or rush, just heat and quiet ownership.</p>
     <p>They unbutton slowly. Their chest rises with each breath, trying to control the tremble in their hands. You notice everything. You always do.</p>
     <p>You sit back in the chair nearby, legs spread slightly, hands resting on your thighs. Watching. Grounded.</p>
@@ -201,7 +236,8 @@
     <p>They nod, almost imperceptibly.</p>
     <p>“I could see it in your eyes. The way you needed someone to take over. The way you needed to feel held.”</p>
     <p>Their throat moves as they swallow. You feel the tension beneath their skin. The kind that only lets go when someone else is finally in control.</p>
-    <p>Your hand slides down their side, fingers dragging lightly across warm skin. Their body arches into your touch without thinking. Their hips shift beneath you, eager, needy, already chasing friction. But you don’t give them what they want. Not yet.</p>
+    <p>Your hand slides down their side, fingers dragging lightly across warm skin. Their body arches into your touch without thinking. Their hips shift beneath you, eager, needy, already chasing friction. But you don’t give them what they want.</p>
+    <p>Not yet.</p>
     <p>You lean in, brush your lips along their jaw, and whisper, “Good. Because tonight you’re mine. Completely. And I’m going to take my time showing you exactly what that means.”</p>
     <p>You kiss them once, slow, deep enough to make their body go soft underneath you. You kiss like you have all night. Like the world can wait.</p>
     <p>Then you start to undress. Still on top of them, your weight holding them in place. You let them feel every movement, the way the tension shifts as more of your skin meets theirs.</p>
@@ -210,10 +246,7 @@
     <p>They’re already desperate for more. Already flushed. You don’t need to check. You feel it in their breath. In the way their thighs press together.</p>
     <p>Your fingers move slowly, spreading warmth with every stroke. You’re not rushing to get them off. You’re teaching their body something. Showing them what it means to be handled. To be cared for. To be devoured gently, completely, and without apology.</p>
     <p>They start to shake a little. You murmur praise into their neck, soft affirmations between kisses.</p>
-    <p>You tell them what a good job they’re doing.</p>
-    <p>How much you love watching them fall apart for you.</p>
-    <p>How safe they are.</p>
-    <p>How hot they are like this.</p>
+    <p>You tell them what a good job they’re doing. How much you love watching them fall apart for you. How safe they are. How hot they are like this.</p>
     <p>You feel them build under your touch. Their hips rock up. Their hands grip the sheets, or your arms, or your back. They moan, quiet but desperate, and you meet every sound with calm control.</p>
     <p>When they come, they come hard. Their body curls under yours, and you hold them through it, never letting them drift. Never leaving space for doubt or shame to slip in.</p>
     <p>You stay close. You kiss their shoulder. You stroke their hair. You let the afterglow stretch long.</p>
@@ -222,13 +255,9 @@
     <p>They hum. You feel them smile. You don’t need more than that.</p>
     <p>They came undone for you. Trusted you to take them apart and put them back together without breaking anything that matters.</p>
     <p>And you did.</p>
-    <p>That’s what you do best.</p>
-    <p>Not just take control. Not just lead.</p>
-    <p>You protect.</p>
-    <p>Even when you’re making them moan.</p>
-    <p>Even when you’re causing them to squirm in ecstasy.</p>
-    <p>Even when they’re at their most exposed.</p>
-    <p>Especially then.</p>
+    <p>That’s what you do best. Not just take control. Not just lead. You protect.</p>
+    <p>Even when you’re making them moan. Even when you’re causing them to squirm in ecstasy. Even when they’re at their most exposed.</p>
+    <p>Especially then. Because that’s when it matters most.</p>
   </div>
 </body>
 </html>
