--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Where to Date – Le Libido</title>
+  <title>Where Do You Want to Date?</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -13,86 +13,96 @@
       --green: #06954E;
     }
 
-    html, body {
+    body {
       margin: 0;
       padding: 0;
       font-family: 'Montserrat', sans-serif;
       color: var(--gold);
       text-align: center;
+      height: 100vh;
+      overflow-x: hidden;
+      overflow-y: auto;
+      background-color: black;
+      position: relative;
+    }
+
+    .color-layer {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%;
       height: 100%;
+      z-index: -1;
+      animation: fadeLoop 24s infinite;
+      opacity: 0;
+      transition: opacity 3s ease-in-out;
     }
 
-    body {
-      animation: bgCycle 40s infinite;
-      background-color: var(--red);
-      transition: background-color 4s ease-in-out;
-      padding: 40px 20px 60px;
-      border: 4px solid var(--gold);
+    .color1 { background-color: #950606; animation-delay: 0s; }
+    .color2 { background-color: #064D95; animation-delay: 6s; }
+    .color3 { background-color: #06954E; animation-delay: 12s; }
+    .color4 { background-color: #064D95; animation-delay: 18s; }
+
+    @keyframes fadeLoop {
+      0% { opacity: 1; }
+      20% { opacity: 1; }
+      25% { opacity: 0; }
+      100% { opacity: 0; }
     }
 
-    @keyframes bgCycle {
-      0%   { background-color: var(--red); }
-      20%  { background-color: var(--blue); }
-      40%  { background-color: var(--green); }
-      60%  { background-color: var(--blue); }
-      80%  { background-color: var(--red); }
-      100% { background-color: var(--red); }
+    .container {
+      padding: 60px 20px 40px;
+      max-width: 600px;
+      margin: 0 auto;
     }
 
     .logo {
       max-width: 140px;
-      margin: 0 auto 20px;
-      display: block;
+      margin-bottom: 30px;
     }
 
     h1 {
-      font-size: 2.4rem;
-      margin-bottom: 40px;
-      font-weight: 700;
-      color: var(--gold);
+      font-size: 2rem;
+      margin-bottom: 30px;
     }
 
-    .button-container {
+    .buttons {
       display: flex;
       flex-direction: column;
-      align-items: center;
       gap: 20px;
-      margin-bottom: 35px;
+      margin-bottom: 30px;
     }
 
-    .option-button {
+    .button {
       background-color: transparent;
-      border: 2px solid var(--gold);
       color: var(--gold);
-      padding: 16px 28px;
-      font-size: 1.1rem;
+      border: 2px solid var(--gold);
+      padding: 15px 25px;
+      font-size: 1rem;
       font-weight: 600;
-      border-radius: 10px;
+      border-radius: 8px;
       cursor: pointer;
-      transition: all 0.25s ease;
-      display: inline-flex;
-      align-items: center;
-      gap: 10px;
+      transition: transform 0.2s ease, background-color 0.2s ease;
     }
 
-    .option-button:hover {
-      background-color: var(--gold);
-      color: black;
+    .button:hover {
+      transform: scale(1.05);
+      background-color: rgba(255, 255, 255, 0.1);
     }
 
     .caption {
       font-size: 1rem;
-      font-style: italic;
-      color: var(--gold);
-      max-width: 600px;
-      margin: 0 auto 40px;
+      margin-bottom: 40px;
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0 10px;
       line-height: 1.6;
     }
 
     footer {
-      font-size: 0.85rem;
+      font-size: 0.8rem;
       color: var(--gold);
-      margin-top: 30px;
+      padding: 20px;
     }
 
     footer a {
@@ -100,113 +110,105 @@
       text-decoration: underline;
     }
 
-    @media (min-width: 600px) {
-      .button-container {
-        flex-direction: row;
-        justify-content: center;
-      }
-    }
-
-    /* Modal Styling */
+    /* Modal styles */
     .modal {
       display: none;
       position: fixed;
-      z-index: 1000;
+      z-index: 99;
       left: 0; top: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0,0,0,0.8);
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.8);
       align-items: center;
       justify-content: center;
     }
 
     .modal-content {
-      background-color: #1a1a1a;
-      padding: 30px;
+      background-color: #202020;
       border: 2px solid var(--gold);
+      padding: 30px 20px;
       border-radius: 10px;
       max-width: 400px;
       width: 90%;
       color: white;
+      text-align: left;
     }
 
     .modal-content h2 {
       color: var(--gold);
-      margin-bottom: 20px;
+      margin-top: 0;
     }
 
-    .modal-content input[type="text"],
-    .modal-content input[type="email"] {
+    .modal-content input {
       width: 100%;
       padding: 10px;
-      margin: 10px 0 20px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      font-size: 1rem;
+      margin-top: 10px;
+      margin-bottom: 15px;
+      border: 1px solid var(--gold);
+      background: black;
+      color: white;
+      border-radius: 4px;
     }
 
     .modal-content button {
       background-color: var(--gold);
       color: black;
       border: none;
-      padding: 12px 20px;
-      font-weight: 600;
-      border-radius: 6px;
+      padding: 10px 20px;
+      font-weight: bold;
       cursor: pointer;
+      border-radius: 4px;
     }
 
-    .modal-content .close {
-      background: none;
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      font-size: 24px;
       color: var(--gold);
-      font-size: 1.2rem;
-      float: right;
       cursor: pointer;
-      border: none;
     }
   </style>
 </head>
 <body>
 
-  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
+  <!-- Animated background layers -->
+  <div class="color-layer color1"></div>
+  <div class="color-layer color2"></div>
+  <div class="color-layer color3"></div>
+  <div class="color-layer color4"></div>
 
-  <h1>Where do you want to date?</h1>
+  <div class="container">
+    <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-  <div class="button-container">
-    <button class="option-button" onclick="openModal()">🎪 In a Le Libido Venue</button>
-    <button class="option-button" onclick="window.location.href='download-app.html'">📍 Date on the Go</button>
-  </div>
+    <h1>Where do you want to date?</h1>
 
-  <div class="caption">
-    Meet someone as wild, adventurous, or romantic as you are. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
+    <div class="buttons">
+      <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">In a Le Libido Venue</button>
+      <button class="button" onclick="window.location.href='https://lelibido.com/proximity-app.html'">Date on the Go</button>
+    </div>
+
+    <div class="caption">
+      Meet someone as wild, adventurous, or romantic as you are. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
+    </div>
   </div>
 
   <footer>
     © 2025 Le Libido. All rights reserved. | <a href="/legal.html">Legal Notice</a>
   </footer>
 
-  <!-- Modal -->
+  <!-- Venue Modal -->
   <div id="venueModal" class="modal">
     <div class="modal-content">
-      <button class="close" onclick="closeModal()">✕</button>
+      <span class="close" onclick="document.getElementById('venueModal').style.display='none'">&times;</span>
       <h2>Coming Soon</h2>
-      <p>Enter your name and email to join the waitlist for our first Le Libido venue.</p>
+      <p>The first Le Libido venue is almost here. Want early access?</p>
       <form action="mailto:spencer@lelibido.com" method="POST" enctype="text/plain">
-        <input type="text" name="Name" placeholder="Your Name" required />
-        <input type="email" name="Email" placeholder="Your Email" required />
-        <button type="submit">Join Waitlist</button>
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <button type="submit">Join the Waitlist</button>
       </form>
     </div>
   </div>
-
-  <script>
-    function openModal() {
-      document.getElementById('venueModal').style.display = 'flex';
-    }
-
-    function closeModal() {
-      document.getElementById('venueModal').style.display = 'none';
-    }
-  </script>
 
 </body>
 </html>
