--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -13,53 +13,52 @@
       --green: #06954E;
     }
 
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
+      padding: 0;
+    }
+
+    html, body {
       font-family: 'Montserrat', sans-serif;
       color: var(--gold);
-      text-align: center;
+      position: relative;
       overflow: hidden;
+      min-height: 100vh;
     }
 
     .wipe-bg {
       position: fixed;
-      top: 0; left: 0;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       z-index: -1;
-      animation: colorWipe 25s linear infinite;
-    }
-
-    @keyframes colorWipe {
-      0% { background-color: var(--red); }
-      20% { background-color: var(--blue); }
-      40% { background-color: var(--green); }
-      60% { background-color: var(--blue); }
-      80% { background-color: var(--red); }
-      100% { background-color: var(--blue); }
+      transform-origin: bottom right;
+      background-color: var(--red);
+      transition: background-color 0s;
     }
 
     .container {
-      padding: 40px 20px 20px;
-      min-height: 100vh;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
+      padding: 60px 20px 40px;
+      max-width: 600px;
+      margin: 0 auto;
+      text-align: center;
+      position: relative;
+      z-index: 2;
     }
 
     .logo {
       max-width: 140px;
-      margin: 0 auto 20px;
+      margin-bottom: 30px;
     }
 
     h1 {
       font-size: 2rem;
       margin-bottom: 30px;
-      font-weight: 700;
     }
 
-    .button-group {
+    .buttons {
       display: flex;
       flex-direction: column;
       gap: 20px;
@@ -67,68 +66,162 @@
     }
 
     .button {
-      border: 2px solid var(--gold);
-      background: transparent;
+      background-color: transparent;
       color: var(--gold);
-      font-size: 1.1rem;
+      border: 2px solid var(--gold);
       padding: 15px 25px;
+      font-size: 1rem;
+      font-weight: 600;
       border-radius: 8px;
       cursor: pointer;
-      transition: all 0.3s ease;
+      transition: transform 0.2s ease, background-color 0.2s ease;
     }
 
     .button:hover {
-      background-color: var(--gold);
-      color: #000;
+      transform: scale(1.05);
+      background-color: rgba(255, 255, 255, 0.1);
     }
 
     .caption {
       font-size: 1rem;
-      margin: 20px auto 30px;
-      max-width: 600px;
+      margin-bottom: 40px;
+      max-width: 500px;
+      margin-left: auto;
+      margin-right: auto;
+      padding: 0 10px;
       line-height: 1.6;
     }
 
     footer {
-      font-size: 0.85rem;
+      font-size: 0.8rem;
       color: var(--gold);
-      margin-bottom: 10px;
+      padding: 20px;
+      text-align: center;
     }
 
-    a {
+    footer a {
       color: var(--gold);
       text-decoration: underline;
     }
 
+    /* Modal styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 99;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0, 0, 0, 0.85);
+      align-items: center;
+      justify-content: center;
+    }
+
+    .modal-content {
+      background-color: #202020;
+      border: 2px solid var(--gold);
+      padding: 30px 20px;
+      border-radius: 10px;
+      max-width: 400px;
+      width: 90%;
+      color: white;
+      text-align: left;
+      position: relative;
+    }
+
+    .modal-content h2 {
+      color: var(--gold);
+      margin-top: 0;
+    }
+
+    .modal-content input {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      margin-bottom: 15px;
+      border: 1px solid var(--gold);
+      background: black;
+      color: white;
+      border-radius: 4px;
+    }
+
+    .modal-content button {
+      background-color: var(--gold);
+      color: black;
+      border: none;
+      padding: 10px 20px;
+      font-weight: bold;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    .close {
+      position: absolute;
+      top: 15px;
+      right: 20px;
+      font-size: 24px;
+      color: var(--gold);
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <div class="wipe-bg"></div>
+
+  <div class="wipe-bg" id="wipeBg"></div>
 
   <div class="container">
-    <div>
-      <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
-      <h1>Where do you want to date?</h1>
+    <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
-      <div class="button-group">
-        <button class="button" onclick="window.location.href='mailto:spencer@lelibido.com?subject=Le%20Libido%20Venue%20Waitlist&body=Please%20add%20me%20to%20the%20waitlist.%0AName:%0AEmail:'">
-          In a Le Libido venue
-        </button>
+    <h1>Where do you want to date?</h1>
 
-        <button class="button" onclick="window.location.href='pwa-download.html'">
-          Date on the go
-        </button>
-      </div>
-
-      <div class="caption">
-        Meet someone as wild, adventurous, or romantic as you are. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
-      </div>
+    <div class="buttons">
+      <button class="button" onclick="document.getElementById('venueModal').style.display='flex'">In a Le Libido Venue</button>
+      <button class="button" onclick="window.location.href='pwa-download.html'">Date on the Go</button>
     </div>
 
-    <footer>
-      © 2025 Le Libido. All rights reserved. |
-      <a href="/legal.html">Legal Notice</a>
-    </footer>
+    <div class="caption">
+      Meet someone as wild, adventurous, or romantic as you are. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
+    </div>
   </div>
+
+  <footer>
+    © 2025 Le Libido. All rights reserved. | <a href="/legal.html">Legal Notice</a>
+  </footer>
+
+  <!-- Modal -->
+  <div id="venueModal" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="document.getElementById('venueModal').style.display='none'">&times;</span>
+      <h2>Coming Soon</h2>
+      <p>The first Le Libido venue is almost here. Want early access?</p>
+      <form action="mailto:spencer@lelibido.com" method="POST" enctype="text/plain">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <button type="submit">Join the Waitlist</button>
+      </form>
+    </div>
+  </div>
+
+  <script>
+    const colors = ['#950606', '#064D95', '#06954E', '#064D95', '#950606'];
+    let currentIndex = 0;
+    const bg = document.getElementById('wipeBg');
+
+    function updateColor() {
+      currentIndex = (currentIndex + 1) % colors.length;
+      bg.style.backgroundColor = colors[currentIndex];
+      bg.style.transform = 'scale(0)';
+      setTimeout(() => {
+        bg.style.transition = 'none';
+        bg.style.transform = 'scale(0)';
+        bg.style.backgroundColor = colors[currentIndex];
+        void bg.offsetWidth; // Force repaint
+        bg.style.transition = 'transform 2s ease-in-out';
+        bg.style.transform = 'scale(1)';
+      }, 50);
+    }
+
+    setInterval(updateColor, 6000); // Change color every 6 seconds
+  </script>
+
 </body>
 </html>
