--- a/Where-to-date.html
+++ b/Where-to-date.html
@@ -9,8 +9,8 @@
     :root {
       --gold: #e1bf78;
       --red: #950606;
-      --green: #06954E;
       --blue: #064D95;
+      --green: #06954E;
     }
 
     * {
@@ -19,23 +19,27 @@
       padding: 0;
     }
 
+    html, body {
+      height: 100%;
+      width: 100%;
+    }
+
     body {
       font-family: 'Montserrat', sans-serif;
       color: var(--gold);
+      position: relative;
+      overflow-x: hidden;
       background-color: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      min-height: 100vh;
     }
 
-    .container {
+    .border-wrapper {
       padding: 60px 20px 40px;
       max-width: 600px;
-      width: 90%;
+      margin: 40px auto;
       text-align: center;
-      border: 4px solid var(--gold);
-      border-radius: 16px;
+      border: 6px solid;
+      border-image: linear-gradient(45deg, var(--red), var(--blue), var(--green)) 1;
+      border-radius: 20px;
     }
 
     .logo {
@@ -81,10 +85,6 @@
       padding: 0 10px;
       line-height: 1.6;
     }
-
-    .caption .red { color: var(--red); font-weight: bold; }
-    .caption .green { color: var(--green); font-weight: bold; }
-    .caption .blue { color: var(--blue); font-weight: bold; }
 
     footer {
       font-size: 0.8rem;
@@ -160,7 +160,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="border-wrapper">
     <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
 
     <h1>Where do you want to date?</h1>
@@ -171,9 +171,7 @@
     </div>
 
     <div class="caption">
-      Meet someone as <span class="red">wild</span>, <span class="green">adventurous</span>, or <span class="blue">romantic</span> as you are.  
-      Step into a Le Libido venue for a night of <span class="red">lust</span>, <span class="green">laughter</span>, and <span class="blue">love</span>,  
-      or take the magic with you, wherever you go.
+      Meet someone as wild, adventurous, or romantic as you are. Step into a Le Libido venue for a night of laughter, lust, and love, or take the magic with you, wherever you go.
     </div>
   </div>
 
